--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -1,16 +1,27 @@
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist",
+    "target": "ES2020",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
+    "jsx": "react-jsx",
     "declaration": true,
     "declarationMap": true,
     "emitDeclarationOnly": false,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "strict": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noImplicitAny": false,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "baseUrl": "."
   },
   "include": [
     "src/components/Spreadsheet/**/*",
     "src/lib/**/*",
-    "src/hooks/**/*",
     "src/index.ts"
   ],
   "exclude": [
@@ -18,6 +29,7 @@
     "src/App.tsx",
     "src/main.tsx",
     "src/test/**/*",
+    "src/hooks/**/*",
     "**/*.test.*",
     "**/*.stories.*"
   ]
